<resources>
    <string name="app_name">Arlington Parking</string>
    <string name="toolbar_user">User Homepage</string>
    <string name="toolbar_manager">Manager Homepage</string>
    <string name="toolbar_admin">Admin Homepage</string>
    <string name="toolbar_login">Login</string>
    <string name="toolbar_register">Register</string>
    <string name="toolbar_update">Update Profile</string>
    <string name="toolbar_free_spaces">Get Free Spaces</string>
    <string name="toolbar_list_free_spaces">List of Free Spaces</string>
    <string name="toolbar_spot_details">Spot Details</string>
    <string name="toolbar_view_spots">View Spots</string>
    <string name="toolbar_list_spots">List of Spots</string>
    <string name="toolbar_view_user_details">View User Details</string>
    <string name="toolbar_user_details">User Details</string>
    <string name="toolbar_view_reservation">View Reservation</string>
    <string name="toolbar_reservation_details">Reservation Details</string>
    <string name="toolbar_reserve_spot">Reserve Spot</string>
    <string name="toolbar_reserve_spots">Reserve Spots</string>
    <string name="toolbar_list_reservations">List of Reservations</string>
    <string name="toolbar_list_reservations_user">My Reservations</string>
    <string name="toolbar_list_no_shows">List of No Shows</string>
    <string name="toolbar_edit_profile">Edit Profile</string>
    <string name="prompt_reserved_by">Reserved By</string>
    <string name="prompt_date">Date</string>
    <string name="prompt_area">Area Name</string>
    <string name="prompt_floor">Floor Number</string>
    <string name="prompt_type_of_parking">Type of Parking</string>
    <string name="prompt_basic">Basic</string>
    <string name="prompt_premium">Premium</string>
    <string name="prompt_access">Access</string>
    <string name="prompt_midrange">Midrange</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_role">Role</string>
    <string name="prompt_user">User</string>
    <string name="prompt_manager">Manager</string>
    <string name="prompt_admin">Admin</string>
    <string name="prompt_id">UTA ID</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_dob">Date of Birth</string>
    <string name="prompt_street">Street</string>
    <string name="prompt_city">City</string>
    <string name="prompt_state">State</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_pin">Pin Code</string>
    <string name="prompt_permit">Parking Permit</string>
    <string name="prompt_license">License No.</string>
    <string name="prompt_car">Car Name</string>
    <string name="prompt_availability">Availability</string>
    <string name="prompt_options">Options</string>
    <string name="prompt_camera">Camera</string>
    <string name="prompt_cart">Cart</string>
    <string name="prompt_history">History</string>
    <string name="action_change_role">Change Role</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_revoke_user">Revoke User</string>
    <string name="action_revoke">Revoke</string>
    <string name="action_edit">Edit</string>
    <string name="action_submit">Submit</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_log_in">Log in</string>
    <string name="action_register">Register</string>
    <string name="action_delete">Delete</string>
    <string name="action_unavailable">Make Unavailable</string>
    <string name="action_no_show">Set No Show</string>
    <string name="action_overdue">Set Overdue</string>
    <string name="action_update">Update</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_reserve">Reserve</string>
    <string name="action_update_profile">Update Profile</string>
    <string name="action_logout">Logout</string>
    <string name="action_request_reservation">Request Reservation</string>
    <string name="action_view_spots">View Reserved Spots</string>
    <string name="action_modify_spots">Modify Reserved Spots</string>
    <string name="action_cancel_reservation">Cancel Reservations</string>
    <string name="action_view_no_shows">View No Shows/Violations</string>
    <string name="action_view_free_spots">View Free Spots</string>
    <string name="action_view_spot_details">View Spot Details</string>
    <string name="action_view_user_details">View User Details</string>
    <string name="action_delete_reservation">Delete Reservation</string>
    <string name="action_make_spot_unavailable">Make Spot Unavailable</string>
    <string name="action_set_no_show">Set No Show</string>
    <string name="action_set_overdue">Set Overdue</string>
    <string name="action_search_spaces">Search for Free Spaces</string>
    <string name="action_search_spots">Search for Spots</string>
    <string name="action_search_reservation">Search for Reservation</string>
    <string name="action_search_users">Search for Users</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
</resources>
